Fix: ConnectWalletPopover  mobile alignment

--- a/src/modules/pages/components/RouteLayouts/UserNavigation.css
+++ b/src/modules/pages/components/RouteLayouts/UserNavigation.css
@@ -234,6 +234,14 @@
     width: 120px;
   }
 
+  .connectWalletButton + div[role="tooltip"] {
+    display: flex;
+    justify-content: center;
+    width: 100vw;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
   .gasStationReference + div {
     display: flex;
     justify-content: center;
